--- a/web/css/style.css
+++ b/web/css/style.css
@@ -157,13 +157,14 @@ div#main{
 	min-height: 750px;
 	position: relative;
 	overflow: hidden;
-	padding-top: 100px;
+
 }
 
 img#logo{
-	position: absolute;
+	position: relative;
 	top:20px;
 	left: 365px;
+	margin-bottom: 40px;
 }
 
 h1{	font-size: 24px;}
@@ -536,7 +537,7 @@ form#searchform input#searchsubmit:hover{
 
 .blocks-holder{
 	overflow: hidden;
-	background: url(../img/front-page-separator.png) no-repeat top center;
+
 	margin-bottom: 20px;
 	min-height: 350px;
 }
